Updated the routes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://gaganrajsingh.github.io/MM-804",
+  "homepage": "https://gaganrajsingh.github.io/MM-804",
   "name": "weather",
   "version": "0.1.0",
   "private": true,
